<resources>
    <string name="app_name">Raidighi Tour</string>
    <string name="open">Raidighi Tour</string>
    <string name="close">Raidighi Tour</string>
    <string name="vsiting_place">Vsiting Place</string>
    <string name="time_table">Time Table</string>
    <string name="exiting_point">Exiting Point</string>
    <string name="events">Events</string>
    <string name="emergency_help">Emergency Help</string>
    <string name="public_place">Public Place</string>
    <string name="education">Education</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quotes_one">“Be fearless in the pursuit of what sets your soul on fire.” – Jennifer Lee</string>
    <string name="quotes_two">“Travel makes one modest. You see what a tiny place you occupy in the world.” -Gustav Flaubert</string>
    <string name="qoutes_three">“Traveling – it leaves you speechless, then turns you into a storyteller.” – Ibn Battuta</string>
    <string name="quotes_four">“The gladdest moment in human life is a departure into unknown lands.” – Sir Richard Burton</string>
    <string name="raidighiBridgeDescription">This is Raidighi Bridge above the Moni river</string>
    <string name="raidighiRiverDescription">This is Raidighi river known as Moni river</string>
    <string name="jatardeulDescription">This is a ancent temple called Jotar Deul</string>
    <string name="raidighiDescription">This is a Lake called Raidighi Dighi</string>
    <string name="maaKaliTempleDdescription">This is Maa Kali Temple in Raidighi</string>
    <string name="courseByCollege"><![CDATA[B.A & B.sc(Hons. & Gen.) + B.ed]]></string>
    <string name="giribalaPrimeryScholl">Giribala Adarsha Primery School</string>
    <string name="sannyashiGayenschool">Sannyashi Gayen Girls School</string>
    <string name="raidighiHighSchool">Raidighi S.C.K. High School</string>
    <string name="kashinagarhighschool">Kashinagar High School</string>
    <string name="nagendraputhighschool">Nagendrapur High School</string>
    <string name="this_is_image_title">this is image title</string>
    <string name="childrenkgschool">Children World K.G. School</string>
    <string name="bradanagarkgschool">Bradanagar K.G. School</string>
    <string name="kisalayakgschool">Kishalaya K.G. School</string>
    <string name="empty_descrption">\" \"</string>
    <string name="raidghi_college">Raidghi College</string>
    <string name="address">Address:</string>
    <string name="college_adress">Vill + P.O + P.S = Raidighi, WestBangal, 743383</string>
    <string name="course">Course :</string>
    <string name="call">Call:</string>
    <string name="college_phone_number">9735340005, 9735310008, 9831766135</string>
    <string name="mail">Mail:</string>
    <string name="colleger_mail">raidighicollege95@gmail.com</string>
    <string name="durga_puja_description">Durga Puja is a Hindu festival held in month of Septembar</string>
    <string name="eid_ull_fitor_description">Eid-uul-Fitor is a Mushlim festival held in month of Agaust</string>
    <string name="diwali_description">Diwali is a great Hindu festival held in month of November</string>
    <string name="holi_description">Holi is a festival of friendship held in month of June</string>
    <string name="gangasager_festival_description">Gangasagar festival is the biggest one celebrate in month of January</string>
    <string name="saraswati_puja_description">\"Saraswati Puja is a Hindu festival held in middle of february \"</string>
    <string name="diamond_habour_description">Diamond Harbour city is 50 K.M away from Raidighi</string>
    <string name="kolkatacity_description">Kolkata city is 80 K.M away from Raidighi</string>
    <string name="kakdwip_city_description">Kakdwip sea-beach is 67 K.M away from Raidighi</string>
    <string name="sundarbon_description">The Biggest Mangrov forest Sundarban is 80 K.M away from Raidighi</string>
    <string name="emergency_help_adress">Raidighi, Mathurapur II, South 24 PGS, 743383</string>
    <string name="opening_time">Opening Time:</string>
    <string name="standard_opening_time">Mon-Fri: 10:00 to 17:00</string>
    <string name="panchayet_number">9732974377, 9635646490, 923282705</string>
    <string name="pnchayet_mail">raidighigram@gmail.com</string>
    <string name="alwaysopen">24x7, always open</string>
    <string name="polishstationnumber">03174262426</string>
    <string name="psraidighi_gmail_com">psraidighi@gmail.com</string>
    <string name="poraidighi_gmail_com">poraidighi@gmail.com</string>
    <string name="ponumber">03218-270602</string>
    <string name="hospital_number">9830079999, 9830088884</string>
    <string name="raidighihospital_gmail_com">raidighihospital@gmail.com</string>
</resources>