<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollegeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/raidighi_college"
                android:id="@+id/college"
                android:contentDescription="@null"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raidghi_college"
                android:textColor="#ffffff"
                android:textSize="35sp"
                android:fontFamily="@font/langer_regular"
                android:layout_alignBottom="@id/college"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:text="@string/address"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/college_adress"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/course"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/courseByCollege"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/call"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/college_phone_number"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/mail"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/colleger_mail"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>