<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.android.raidighitour.AViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoStart="true"
            android:id="@+id/sliding_image"
            android:flipInterval="5000">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@null"
                android:background="@drawable/jatardeul"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@null"
                android:background="@drawable/raj_hotel"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@null"
                android:background="@drawable/raidighi_college"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@null"
                android:background="@drawable/raidighi_high_school"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@null"
                android:background="@drawable/raidighi_rural_hospital"/>

        </com.example.android.raidighitour.AViewFlipper>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sliding_image"
            android:id="@+id/first_row_circular_images"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@android:color/holo_green_light">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:id="@+id/image_visiting_place"
                        android:contentDescription="@null"
                        android:src="@drawable/visinting_place_logo"/>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@android:color/holo_green_light">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:id="@+id/image_emrgency_help"
                        android:src="@drawable/emergency_help_logo"/>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@android:color/holo_green_light">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@null"
                        android:layout_gravity="center"
                        android:id="@+id/image_public_place"
                        android:src="@drawable/public_place"/>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_row_circular_images"
            android:id="@+id/second_row_circular_images"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@android:color/holo_green_light">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:id="@+id/image_exiitng_point"
                        android:src="@drawable/exiting_point"/>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@android:color/holo_green_light">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:contentDescription="@null"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:id="@+id/image_events"
                        android:src="@drawable/events"/>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@android:color/holo_green_light">
                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:id="@+id/image_education"
                        android:src="@drawable/education" />
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoStart="true"
            android:layout_marginTop="65dp"
            android:layout_below="@id/second_row_circular_images"
            android:layout_centerInParent="true"
            android:flipInterval="5000">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/quotes_four"
                android:fontFamily="@font/dancing_scripts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/quotes_one"
                android:fontFamily="@font/dancing_scripts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/quotes_two"
                android:fontFamily="@font/dancing_scripts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/qoutes_three"
                android:fontFamily="@font/dancing_scripts"/>
        </ViewFlipper>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/nav_header"
        android:fitsSystemWindows="true"
        android:id="@+id/navigation"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>